fix legend max-width; capitalize toggle visibility button test

--- a/src/components/Legend/_legend-styles.css
+++ b/src/components/Legend/_legend-styles.css
@@ -25,7 +25,7 @@
 .labels {
   flex-direction: column;
   align-items: flex-start;
-  max-width: 20px;
+  max-width: 210px;
 }
 
 label {
